Issue 18, integrated frontend and backend
